processed/jira/txt/LU/LU-12705.txt
Key:        LU-12705
Summary:    build fails on power9 client
Link:       https://jira.whamcloud.com/browse/LU-12705
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Gu Zheng
Reporter:   Shuichi Ihara
Created:    Tue, 27 Aug 2019 11:26:03 +0000
Updated:    Thu, 24 Oct 2019 14:27:04 +0000
Resolved:   Mon, 16 Sep 2019 23:32:41 +0000
Links:      Duplicate: is duplicated by LU-12898
Attachments: build-fail.log

--- Environment ---
master branch, b2_12

--- Description ---
build fails on power9 client (littile endian) due to 'long long unsigned int'. not only ll_decode_linkea.c, but also llsom_sync.c, lfs.c so on. both master and b2_12 gets same roblems.

ll_decode_linkea.c: In function 'decode_linkea':
ll_decode_linkea.c:89:4: error: format '%llu' expects argument of type 'long long unsigned int', but argument 4 has type '__u64' [-Werror=format=]
    fname, leh->leh_len, size);
    ^
ll_decode_linkea.c:102:5: error: format '%lld' expects argument of type 'long long int', but argument 4 has type '__u64' [-Werror=format=]
     fname, leh->leh_len, length);
     ^
ll_decode_linkea.c:102:5: error: format '%lld' expects argument of type 'long long int', but argument 5 has type '__u64' [-Werror=format=]
ll_decode_linkea.c:116:4: error: format '%lld' expects argument of type 'long long int', but argument 4 has type '__u64' [-Werror=format=]
    fname, leh->leh_len, length);

--- Comment (gerrit, Fri, 4 Oct 2019 20:31:37 +0000) ---
Oleg Drokin (green@whamcloud.com) merged in patch https://review.whamcloud.com/36313/

Subject: LU-12705 utils: cleanup unnecessary typecasting

Project: fs/lustre-release

Branch: b2_12

Current Patch Set: 

Commit: 67a643f2c01da72b2918fa780a28d9c05fc3b15a

--- Comment (gerrit, Sat, 28 Sep 2019 21:01:44 +0000) ---
Minh Diep (mdiep@whamcloud.com) uploaded a new patch: https://review.whamcloud.com/36313

Subject: LU-12705 utils: cleanup unnecessary typecasting

Project: fs/lustre-release

Branch: b2_12

Current Patch Set: 1

Commit: 521c1489487b3b787d2a6074a71108c6e8f36ee3

--- Comment (gerrit, Fri, 27 Sep 2019 23:12:08 +0000) ---
Oleg Drokin (green@whamcloud.com) merged in patch https://review.whamcloud.com/36224/

Subject: LU-12705 utils: cleanup unnecessary typecasting

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: d8135ad2fbe58a0fbe6984584816338542901c5c

--- Comment (gerrit, Mon, 23 Sep 2019 08:43:59 +0000) ---
Oleg Drokin (green@whamcloud.com) merged in patch https://review.whamcloud.com/36207/

Subject: LU-12705 build: fix building fail against Power9 little endian

Project: fs/lustre-release

Branch: b2_12

Current Patch Set: 

Commit: 45f9e02c2fa07d9a94228990cf87d460241d5e01

--- Comment (gerrit, Wed, 18 Sep 2019 05:43:48 +0000) ---
Gu Zheng (gzheng@ddn.com) uploaded a new patch: https://review.whamcloud.com/36224

Subject: LU-12705 utils: cleanup unnecessary typecasting

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 6795d55ae1260982530f64728607fe3c0b2b01d7

--- Comment (gerrit, Tue, 17 Sep 2019 14:42:40 +0000) ---
Minh Diep (mdiep@whamcloud.com) uploaded a new patch: https://review.whamcloud.com/36207

Subject: LU-12705 build: fix building fail against Power9 little endian

Project: fs/lustre-release

Branch: b2_12

Current Patch Set: 1

Commit: 94662d1cce7ffcc5bfffab74aabc4f45b7bddd73

--- Comment (pjones, Mon, 16 Sep 2019 23:32:41 +0000) ---
Landed for 2.13

--- Comment (gerrit, Mon, 16 Sep 2019 23:00:55 +0000) ---
Oleg Drokin (green@whamcloud.com) merged in patch https://review.whamcloud.com/36007/

Subject: LU-12705 build: fix building fail against Power9 little endian

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 4eddf36ac3607c66c172668b30eb5dcf921e3de4

--- Comment (gerrit, Fri, 30 Aug 2019 13:10:46 +0000) ---
Gu Zheng (gzheng@ddn.com) uploaded a new patch: https://review.whamcloud.com/36007

Subject: LU-12705 build: fix building fail against Power9 little endian

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 89cf428dc530217a5e5bee838121e4dfe964a83f

--- Comment (sihara, Wed, 28 Aug 2019 10:51:06 +0000) ---
I think one difference is big endian (ppc64 client on jenkins) vs little endian on my client.

--- Comment (adilger, Tue, 27 Aug 2019 16:10:26 +0000) ---
I thought we build every patch on Power, how is your build different from what is done by Jenkins?

--- Comment (simmonsja, Tue, 27 Aug 2019 12:21:42 +0000) ---
Yes I saw this some time ago but haven't got around to it. Its the return of PRi64 handling.

--- Comment (sihara, Tue, 27 Aug 2019 11:28:38 +0000) ---
full build log is attached. https://jira.whamcloud.com/secure/attachment/33420/build-fail.log
